# gs-ext-alttabmod-thumbnails

./: .gitignore  Makefile.am  README.md  configure.ac  extension.js  metadata.json
src/: Makefile.am  extension.js  metadata.json
