#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([GNOME Shell Extension Alt Tab Mod Always Show Thumbnails], [1], [https://github.com/dsboger/gs-ext-alttabmod-thumbnails/issues], [gs-ext-alttabmod-thumbnails], [https://github.com/dsboger/gs-ext-alttabmod-thumbnails])
AC_CONFIG_SRCDIR([src/extension.js])
AC_CONFIG_AUX_DIR([acaux])

# Checks for programs.
AC_PROG_INSTALL

AM_INIT_AUTOMAKE([1.15 foreign])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
